Bug 407397 - Impossible to adjust the volume level of the notification sounds
Summary: Impossible to adjust the volume level of the notification sounds
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_pulseaudio (other bugs)
Version First Reported In: 5.18.1
Platform: Arch Linux Linux
: HI major
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords: regression, triaged, usability
: 353970 364727 409370 410398 414043 414705 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-10 16:00 UTC by Patrick Silva
Modified: 2020-04-29 16:42 UTC (History)
25 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.5
Sentry Crash Report:


Attachments
screen recording (1.71 MB, video/webm)
2019-05-10 16:00 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-05-10 16:00:32 UTC
Created attachment 119957 [details]
screen recording

SUMMARY
Watch the attached video recorded on neon dev unstable please.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.0
Comment 1 Patrick Silva 2019-05-16 17:36:12 UTC
same problem on plasma 5.16 beta.

Operating System: Arch Linux 
KDE Plasma Version: 5.15.90
KDE Frameworks Version: 5.58.0
Qt Version: 5.13.0 beta3
Comment 2 Nate Graham 2019-05-21 21:25:42 UTC
Cannot reproduce. It looks from your video like mute mode is being reset to on no matter what volume you set. That's odd. Does it work if you first uncheck the mute button on the right?
Comment 3 Patrick Silva 2019-05-21 21:31:26 UTC
(In reply to Nate Graham from comment #2)
> Does it work if you first uncheck the mute button on the right?

No. It's still reproducible on my neon dev unstable.
Comment 4 Nate Graham 2019-05-21 21:38:28 UTC
Very strange.
Comment 5 Patrick Silva 2019-06-07 14:15:23 UTC
The same problem occurs with Plasma 5.15.5 on Arch Linux.
Operating System: Arch Linux 
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.3

I just noticed that the slider indicates the volume level incorrectly on Plasma 5.16 beta. As we can see in the attached screen recording, 100% is positioned in the left side of the slider, 0% is positioned in the right side.
Comment 6 isi.floss 2019-06-17 08:22:44 UTC
I have the problem, too.

If i change notification sounds volume, it gets muted/set to zero.

Operating System: openSUSE Tumbleweed 20190612
KDE Plasma Version: 5.16.0
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.3
Kernel Version: 5.1.7-1-default
Comment 7 Patrick Silva 2019-06-17 20:36:29 UTC
Could this bug be related to the fix for bug 398392 ?
Comment 8 Patrick Silva 2019-07-14 14:10:38 UTC
*** Bug 409370 has been marked as a duplicate of this bug. ***
Comment 9 Patrick Silva 2019-08-02 12:36:10 UTC
*** Bug 410398 has been marked as a duplicate of this bug. ***
Comment 10 TheBeheader 2019-08-02 13:12:32 UTC
since you are considering my bug report a duplicate of this one i'm copying my post here.

please review the following threads. the notification sounds cannot be enabled. i'm assuming it's a plasma desktop issue.


https://forum.kde.org/viewtopic.php?f=67&t=161672


https://www.linuxquestions.org/questions/linux-general-1/no-notification-sounds-in-kubuntu-19-04-a-4175657824/

Kubuntu 19.04 Kernel 5.2.1
nVidia 430 Driver, Asus 970 Gaming/Aura, AMD FX 6300, 16Gig DDR3, 
Samsung 120Gig 850 EVO, AOC 29" Ultra Wide 2560x1080, nVidia 750Ti,
USB 3 Card, Drives 2TB, 1.5TB, 1TB
Comment 11 Myriam Schweingruber 2019-08-02 19:35:38 UTC
Reproducible on Kubuntu 19.04, Plasma 5.16.3. Could this be another side effect  of the switch libinput? The system notification KCM is completely grayed out, and the System Settings side bar shows two entries for Notifications.

FWIW: the Mouse KCM broke due to the library switch to make it Wayland compatible, suddenly missing configuration items.
Comment 12 Nate Graham 2019-08-02 20:07:30 UTC
This is about notification sounds, not input devices. Libinput shouldn't be affecting this at all.
Comment 13 Musikolo 2019-08-03 01:26:49 UTC
Hi,

I'm also having the same issue as shown in the screen recording.

Laptop model: Lenovo E480
Operating System: Arch Linux
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0
Linux Kernel: 5.2.5

lspci -v output for audio device:
00:1f.3 Audio device: Intel Corporation Sunrise Point-LP HD Audio (rev 21)
        Subsystem: Lenovo Sunrise Point-LP HD Audio
        Flags: bus master, fast devsel, latency 64, IRQ 144
        Memory at f1520000 (64-bit, non-prefetchable) [size=16K]
        Memory at f1510000 (64-bit, non-prefetchable) [size=64K]
        Capabilities: <access denied>
        Kernel driver in use: snd_hda_intel
        Kernel modules: snd_hda_intel, snd_soc_skl

Using the same software in my other laptop (Slimbook Pro) everything works good. I don't know if the issue shows up when you change the volume levels, it becomes zero/muted and you cannot change it anymore. Not fully sure this is true, but I suspect so.

When you click on the mute volume button, you see the bar highlights a bit, but volume level stays zero. When you adjust the volume, bar darkens again indicating it got muted again.

I hope a solution is found shortly. 

Thank you!
Comment 14 Musikolo 2019-08-03 13:07:06 UTC
I just found that after clicking on the mute button of the Notification Sounds bar, although the sound level is 0%, notification sound is back again! This is very strange, but it worked!!
Comment 15 TheBeheader 2019-08-03 14:16:44 UTC
(In reply to Musikolo from comment #14)
> I just found that after clicking on the mute button of the Notification
> Sounds bar, although the sound level is 0%, notification sound is back
> again! This is very strange, but it worked!!

just tried that and the mute button will click but do noting.
Comment 16 Mark Smith 2019-08-05 11:45:21 UTC
I had the same thing at first in the latest Kde Neon, then I noticed it's there also if you boot from the live media. Finally the same thing happened in a fresh install of Manjaro Kde. This can be solved by unmuting from a pkg called pavucontrol. I wonder if there is some terminal command to unmute without having to install anything. Anyway, pavucontrol can be removed once you unmute.

I hope it will be fixed because it's very annoying and may take a long time to troubleshoot for the end user.
Comment 17 TheBeheader 2019-08-05 12:20:26 UTC
(In reply to marklikesvideogames from comment #16)
> I had the same thing at first in the latest Kde Neon, then I noticed it's
> there also if you boot from the live media. Finally the same thing happened
> in a fresh install of Manjaro Kde. This can be solved by unmuting from a pkg
> called pavucontrol. I wonder if there is some terminal command to unmute
> without having to install anything. Anyway, pavucontrol can be removed once
> you unmute.
> 
> I hope it will be fixed because it's very annoying and may take a long time
> to troubleshoot for the end user.

just installed manjaro myself yesterday and yes it's the same there no notification sounds.
Comment 18 steddy 2019-08-05 14:18:47 UTC
I have the same issue.

Operating System: Arch Linux 
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0
Kernel Version: 5.2.5-arch1-1-ARCH

Audio:
phonon-qt5-gstreamer 4.9.1-1
Switching to phonon-qt5-vlc doesn't help.

I am able to change the System Sounds with pavucontrol only.
Comment 19 steddy 2019-08-05 17:05:15 UTC
I found out that you are able to "bypass" this issue also using kmix (kde sound mixer)
Comment 20 Kai Uwe Broulik 2019-08-05 17:11:25 UTC
What PulseAudio versions are you on? Works fine for me on the rather old 11.1 neon ships. Maybe the way plasma-pa manipulates the stream fails in newer versions.
Comment 21 Kai Uwe Broulik 2019-08-05 17:11:36 UTC
Nevermind, neon dev unstable also affected apparently.
Comment 22 TheBeheader 2019-08-20 11:40:38 UTC
no new info on this yet?
Comment 23 Myriam Schweingruber 2019-08-20 21:36:11 UTC
(In reply to TheBeheader from comment #22)
> no new info on this yet?

how about some patience? The devs are aware and working on it, just not necessarily at the top of the list in their workload. With current GSOC drawing to an end and Akademy around the corner (to just name a few of the current events) everybody is very busy right now.
Comment 24 TheBeheader 2019-08-20 22:20:45 UTC
how about not being rude for no legitimate reason? i only asked a question.
Comment 25 TheBeheader 2019-09-07 16:04:47 UTC
o.k. long story short i just bumped my threads on both linuxquestions and the kubuntu forums and got my issue resolved. barfly prompted me to recheck pulse audio. on the playback tab system sounds were disabled. somehow i messed that tab in previous attempts to fix the issue. after enabling the sounds there i launched thunderbird to see if i'd get the notification sound for new mail and i did. this may not be a fix for all with the issue but worth at least look.
Comment 26 isi.floss 2019-09-07 16:25:37 UTC
(In reply to TheBeheader from comment #25)
> o.k. long story short i just bumped my threads on both linuxquestions and
> the kubuntu forums and got my issue resolved. barfly prompted me to recheck
> pulse audio.

So, I just installed pavucontrol and set the System Sounds volume up from 0%. Now, I can set the Notificaion Sounds volume in Plasma Audio Volume Settings.
But I don't know whether it already worked in Plasma Audio Volume Settings as I did not test beforehand.

The problem is solved for me.
Comment 27 steddy 2019-09-07 16:34:52 UTC
> But I don't know whether it already worked in Plasma Audio Volume Settings
> as I did not test beforehand.

I'm pretty sure it didn't. I remember that, when I had this issue, only pavucontrol was finally able to "unstuck" the slider. So no, in my case (and probably also yours) it did not work beforehand.
Comment 28 Rober 2019-10-15 11:30:28 UTC
(In reply to isi.floss from comment #26)
> (In reply to TheBeheader from comment #25)
> > o.k. long story short i just bumped my threads on both linuxquestions and
> > the kubuntu forums and got my issue resolved. barfly prompted me to recheck
> > pulse audio.
> 
> So, I just installed pavucontrol and set the System Sounds volume up from
> 0%. Now, I can set the Notificaion Sounds volume in Plasma Audio Volume
> Settings.
> But I don't know whether it already worked in Plasma Audio Volume Settings
> as I did not test beforehand.
> 
> The problem is solved for me.

It's solved for me too. Thanks
Comment 29 steddy 2019-10-22 15:27:57 UTC
Problem persists in Ubuntu 19.10 with Plasma 5.17.0

Operating System: Kubuntu 19.10
KDE Plasma Version: 5.17.0
KDE Frameworks Version: 5.62.0
Qt Version: 5.12.4
Kernel Version: 5.3.0-18-generic
OS Type: 64-bit
Comment 30 TheBeheader 2019-10-23 11:10:29 UTC
i got lucky and my issue was a matter of going in to pulse and turning the sound on their to get my notification sounds, but shouldn't of been off by default in the first place. and yes it's off by default. i know cause i just tested kubuntu 19.10 and it exactly the same. now that said how about the devs weighing in here every once in awhile for those that we're as lucky as me and letting them know they haven't forgotten about this?
Comment 31 TheBeheader 2019-10-23 11:11:38 UTC
"Problem persists in Ubuntu 19.10 with Plasma 5.17.0"  ditto
Comment 32 steddy 2019-10-24 17:46:02 UTC
Persists in Kubuntu 19.10 with Plasma 5.17.1

Operating System: Kubuntu 19.10
KDE Plasma Version: 5.17.1
KDE Frameworks Version: 5.62.0
Qt Version: 5.12.4
Kernel Version: 5.3.0-19-generic
Comment 33 Patrick Silva 2019-11-12 01:05:59 UTC
*** Bug 414043 has been marked as a duplicate of this bug. ***
Comment 34 KOT040188 2019-11-12 11:57:37 UTC
Kde neon, plasma 5.17.2 Notification sound is broken https://youtu.be/iIpF2SkhgKs
Comment 35 Nate Graham 2019-11-14 17:53:29 UTC
*** Bug 353970 has been marked as a duplicate of this bug. ***
Comment 36 Nate Graham 2019-11-14 17:53:53 UTC
*** Bug 364727 has been marked as a duplicate of this bug. ***
Comment 37 Patrick Silva 2019-12-02 12:01:32 UTC
*** Bug 414705 has been marked as a duplicate of this bug. ***
Comment 38 Chris 2019-12-29 06:35:37 UTC
Can confirm this is still happening, on the latest stable build of Neon (20191226-1116). Although, all I had to do to fix it was install `pavucontrol-qt`, and all of my system sounds started working, like the noise when you increase or decrease the volume and notifications.
Comment 39 philip mirabelli 2020-03-02 08:38:32 UTC
The issue is also present in Plasma 5.18.2 running version 5.5.6-arch1-1
Comment 40 philip mirabelli 2020-03-02 08:38:46 UTC
The issue is also present in Plasma 5.18.2 running version 5.5.6-arch1-1
Comment 41 mirh 2020-04-04 23:05:37 UTC
If it can help, I can manage to break notification sounds altogether (without even entering their settings) by doing

systemctl --user restart pulseaudio.socket
Comment 42 Bart Ribbers 2020-04-13 11:43:51 UTC
I had the same problem on Alpine Linux with Plasma 5.18.4.1, KDE Frameworks 5.69.0 and Qt 5.14.1. After installing Pavucontrol and unmuting it from there, I can now hear system sounds again and even control it via the plasma-pa KCM.
Comment 43 Nate Graham 2020-04-14 15:05:42 UTC
There's a patch: https://phabricator.kde.org/D28822
Comment 44 Nicolas Fella 2020-04-15 11:22:56 UTC
Git commit 5bdd1368957955c900d5a17bf6c890bb0920d356 by Nicolas Fella.
Committed on 15/04/2020 at 11:23.
Pushed by nicolasfella into branch 'Plasma/5.18'.

Create StreamRestore channel if none exists

Summary:
We need one channel to be able to control the volume. This restores D7485 which was broken by D20450 while fixing a different issue.
This patch tries to combine the two by only creating a new channel if none exists and not messing with existing ones.

Test Plan: Can control the notification volume in the KCM now. The slider position matches the one in pavucontrol

Reviewers: #plasma, drosca, broulik, ngraham

Reviewed By: ngraham

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28822

M  +14   -0    src/streamrestore.cpp

https://commits.kde.org/plasma-pa/5bdd1368957955c900d5a17bf6c890bb0920d356
Comment 45 Afif 2020-04-29 05:27:55 UTC
I still have issue with this problem, even though I can hear notification sounds.

KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.2
Kernel Version: 5.6.7
Comment 46 Afif 2020-04-29 05:38:02 UTC
(Re-sending comment, forgot to properly tag my comment. I apologize)

I still have issue with this problem, even though I can hear notification sounds.

KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.2
Kernel Version: 5.6.7
Comment 47 Nate Graham 2020-04-29 14:21:58 UTC
It's fixed in 5.18.5, which hasn't been released yet.
Comment 48 agentxlax 2020-04-29 16:42:16 UTC
Cool was getting a bit tired of adding pulse components to address the issue.